Fix collapse display in tables.

--- a/resources/styles/themes/new/styles.css
+++ b/resources/styles/themes/new/styles.css
@@ -273,7 +273,6 @@ svg.svg-grid-icons.svg-icons_flag-none {
 
 .cell .date-view,
 .cell .time-view,
-.cell > div,
 .editable-grid-field {
     height: 100%;
 }
